--- a/nowness/index.html
+++ b/nowness/index.html
@@ -221,9 +221,7 @@
               <h3>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
-                eos explicabo sed mollitia hic deleniti animi beatae nesciunt
-                laboriosam quidem reiciendis!
+                reprehenderit quos
               </p>
             </div>
             <div class="around-the-world-content-card">
@@ -231,9 +229,7 @@
               <h3>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
-                eos explicabo sed mollitia hic deleniti animi beatae nesciunt
-                laboriosam quidem reiciendis!
+                reprehenderit quos
               </p>
             </div>
           </div>
@@ -243,9 +239,7 @@
               <h3>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
-                eos explicabo sed mollitia hic deleniti animi beatae nesciunt
-                laboriosam quidem reiciendis!
+                reprehenderit quos
               </p>
             </div>
             <div class="around-the-world-content-card">
@@ -253,9 +247,7 @@
               <h3>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-                reprehenderit quos, ab rem fuga quasi dolor similique consequatur
-                eos explicabo sed mollitia hic deleniti animi beatae nesciunt
-                laboriosam quidem reiciendis!
+                reprehenderit quos
               </p>
             </div>
           </div>
