header styling fixed for mobile

--- a/nowness/index.html
+++ b/nowness/index.html
@@ -12,11 +12,10 @@
   <body>
     <!-- header -->
     <header>
-      <div class="header">
+      <div class="header-container">
         <div class="row1-header">
           <div class="row1-header-left">
-            
-            <input type="checkbox" id="hamburger-input" class="hidden">
+            <input type="checkbox" id="hamburger-input" class="hidden" />
 
             <label for="hamburger-input">
               <div class="Menu-container">
@@ -36,32 +35,34 @@
                 <li>TOPICS</li>
                 <li>PICKS</li>
                 <li>CONTRIBUTORS</li>
-                <li><div class="icons-container">
-                  <svg width="25px" viewBox="0 0 25 25">
-                    <use href="#facebook_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#twitter_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#instagram_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#tumbler_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#pinterest_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#youtube_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#vimeo_logo"></use>
-                  </svg>
-                  <svg height="25px" viewBox="0 0 25 25">
-                    <use href="#wechat_logo"></use>
-                  </svg>
-                </div></li>
+                <li>
+                  <div class="icons-container">
+                    <svg width="25px" viewBox="0 0 25 25">
+                      <use href="#facebook_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#twitter_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#instagram_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#tumbler_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#pinterest_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#youtube_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#vimeo_logo"></use>
+                    </svg>
+                    <svg height="25px" viewBox="0 0 25 25">
+                      <use href="#wechat_logo"></use>
+                    </svg>
+                  </div>
+                </li>
                 <li>NOWNESS AWRDS</li>
                 <li>ABOUT US</li>
                 <li>MASTHEAD</li>
@@ -74,22 +75,21 @@
                 </ul>
               </ul>
             </nav>
+            <svg class="header-logo" width="500px" viewBox="0 0 20 5">
+              <use href="#main-logo"></use>
+            </svg>
           </div>
 
-          <svg class="header-logo"  >
-            <use href="#main-logo"></use>
-          </svg>
-
           <div class="row1-header-right">
-            <svg height="18px" viewBox="0 0 20 20">
+            <svg class="icon" height="26px" viewBox="0 0 20 20">
               <use href="#search_logo"></use>
             </svg>
 
-            <svg width="18px" viewBox="0 0 20 20">
+            <svg class="icon" width="26px" viewBox="0 0 20 20">
               <use href="#play_logo"></use>
             </svg>
 
-            <svg width="18px" viewBox="0 0 20 20">
+            <svg class="icon" width="26px" viewBox="0 0 20 20">
               <use href="#person_logo"></use>
             </svg>
           </div>
@@ -112,7 +112,7 @@
 
     <!-- main content -->
 
-    <div class="main-content">
+    <!-- <div class="main-content">
       <div class="today">
         <div>
           <div><img class="today-image" src="./images/image-test7.jpg" alt="" /></div>
@@ -489,7 +489,7 @@
         <p>Ⓒ 2022 MODERN MOBILE DIGITAL MEDIA CO. LTD. ALL RIGHTS RESERVED.</p>
         <p>粤ICP备10213522号</p>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- social logos -->
     <svg display="none">
@@ -776,8 +776,6 @@
           d="M135.149,0.349l29.359,30.758V1.948h4.193v39.345l-29.359-30.708v29.009h-4.193V0.349z"
         />
       </svg>
-
-
     </svg>
   </body>
 </html>
