no direct flight mobile updated

--- a/index.html
+++ b/index.html
@@ -196,41 +196,35 @@
         </div>
       </div>
 
-      <!-- <div class="no-direct-flight">
-        <h2>NO DIRECT FLIGHT</h2>
-        <div class="no-direct-flight-content">
+      <div class="no-direct-flight container">
+        <h3>NO DIRECT FLIGHT</h3>
+        <div class="no-direct-flight-content-container">
           <div class="no-direct-flight-content-card">
-            <img src="./images/iamge-test5.jpg" width="370" alt="" />
-            <h3>Title of Text</h3>
-            <p>
+            <img src="./images/img-ndf.jpg" width="535" alt="" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos, ab rem fuga quasi dolor similique
-              consequatur eos explicabo sed mollitia hic deleniti animi beatae
-              nesciunt laboriosam quidem reiciendis!
+              Doloremque reprehenderit quos
             </p>
           </div>
           <div class="no-direct-flight-content-card">
-            <img src="./images/iamge-test5.jpg" width="370" alt="" />
-            <h3>Title of Text</h3>
-            <p>
+            <img src="./images/img-ndf.jpg" width="535" alt="" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos, ab rem fuga quasi dolor similique
-              consequatur eos explicabo sed mollitia hic deleniti animi beatae
-              nesciunt laboriosam quidem reiciendis!
+              Doloremque reprehenderit quos
             </p>
           </div>
           <div class="no-direct-flight-content-card">
-            <img src="./images/iamge-test5.jpg" width="370" alt="" />
-            <h3>Title of Text</h3>
-            <p>
+            <img src="./images/img-ndf.jpg" width="535" alt="" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque reprehenderit quos, ab rem fuga quasi dolor similique
-              consequatur eos explicabo sed mollitia hic deleniti animi beatae
-              nesciunt laboriosam quidem reiciendis!
+              Doloremque reprehenderit quos
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- <div class="around-the-world">
         <h2>AROUND THE WORLD</h2>
@@ -238,7 +232,7 @@
           <div class="around-the-world-content-left">
             <div class="around-the-world-content-card">
               <img src="./images/image-test4.jpg" alt="" width="370" />
-              <h3>Title of Text</h3>
+              <h4>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
@@ -246,7 +240,7 @@
             </div>
             <div class="around-the-world-content-card">
               <img src="./images/image-test4.jpg" alt="" width="370" />
-              <h3>Title of Text</h3>
+              <h4>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
@@ -256,7 +250,7 @@
           <div class="around-the-world-content-right">
             <div class="around-the-world-content-card">
               <img src="./images/image-test4.jpg" alt="" width="370" />
-              <h3>Title of Text</h3>
+              <h4>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
@@ -264,7 +258,7 @@
             </div>
             <div class="around-the-world-content-card">
               <img src="./images/image-test4.jpg" alt="" width="370" />
-              <h3>Title of Text</h3>
+              <h4>Title of Text</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
