around the world mobile updated

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
         </div>
       </div>
 
+      <div class="line-border"></div>
+
       <div class="recent-uploads container">
         <div class="card-container">
           <div class="recent-uploads-card">
@@ -196,10 +198,12 @@
         </div>
       </div>
 
+      <div class="line-border"></div>
+
       <div class="no-direct-flight container">
         <h3>NO DIRECT FLIGHT</h3>
         <div class="no-direct-flight-content-container">
-          <div class="no-direct-flight-content-card">
+          <div class="no-direct-flight content-card">
             <img src="./images/img-ndf.jpg" width="535" alt="" />
             <h4>Title of Text</h4>
             <p class="description-1">
@@ -207,7 +211,7 @@
               Doloremque reprehenderit quos
             </p>
           </div>
-          <div class="no-direct-flight-content-card">
+          <div class="no-direct-flight content-card">
             <img src="./images/img-ndf.jpg" width="535" alt="" />
             <h4>Title of Text</h4>
             <p class="description-1">
@@ -215,7 +219,7 @@
               Doloremque reprehenderit quos
             </p>
           </div>
-          <div class="no-direct-flight-content-card">
+          <div class="no-direct-flight content-card">
             <img src="./images/img-ndf.jpg" width="535" alt="" />
             <h4>Title of Text</h4>
             <p class="description-1">
@@ -226,51 +230,52 @@
         </div>
       </div>
 
-      <!-- <div class="around-the-world">
-        <h2>AROUND THE WORLD</h2>
-        <div class="around-the-world-content">
-          <div class="around-the-world-content-left">
-            <div class="around-the-world-content-card">
-              <img src="./images/image-test4.jpg" alt="" width="370" />
+      <div class="line-border"></div>
+
+      <div class="around-the-world container">
+        <h3>AROUND THE WORLD</h3>
+        <div class="around-the-world-content-container">
+          <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
               <h4>Title of Text</h3>
-              <p>
+              <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
               </p>
-            </div>
-            <div class="around-the-world-content-card">
-              <img src="./images/image-test4.jpg" alt="" width="370" />
+           </div>
+          <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
               <h4>Title of Text</h3>
-              <p>
+                <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
               </p>
-            </div>
           </div>
-          <div class="around-the-world-content-right">
-            <div class="around-the-world-content-card">
-              <img src="./images/image-test4.jpg" alt="" width="370" />
+          <div class="around-the-world content-card">
+              <img src="./images/image-test4.jpg" alt="" width="535" />
               <h4>Title of Text</h3>
-              <p>
+                <p class="description-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Doloremque reprehenderit quos
               </p>
-            </div>
-            <div class="around-the-world-content-card">
-              <img src="./images/image-test4.jpg" alt="" width="370" />
-              <h4>Title of Text</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque reprehenderit quos
-              </p>
-            </div>
+           </div>
+          <div class="around-the-world content-card">
+            <img src="./images/image-test4.jpg" alt="" width="535" />
+            <h4>Title of Text</h3>
+              <p class="description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque reprehenderit quos
+            </p>
           </div>
         </div>
-      </div> -->
+      </div>
+      <div class="line-border"></div>
+    
 
-      <!-- <div class="subscribe-to-newsletter">
+
+      <div class="subscribe-to-newsletter container">
         <div class="subscribe-title">
-          <h2 class="h2-subscribe">SUBSCRIBE TO THE NOWNESS NEWSLETTER</h2>
+          <h3 class="h2-subscribe">SUBSCRIBE TO THE NOWNESS NEWSLETTER</h3>
           <p>Be the first to hear about our latest releases</p>
         </div>
         <form
@@ -304,7 +309,7 @@
 
           <button class="button">SUBSCRIBE</button>
         </form>
-      </div> -->
+      </div>
 
       <!-- <div class="most-watched">
         <div class="most-watched-all">
