subscribe mobile updated

--- a/index.html
+++ b/index.html
@@ -236,33 +236,33 @@
         <h3>AROUND THE WORLD</h3>
         <div class="around-the-world-content-container">
           <div class="around-the-world content-card">
-              <img src="./images/image-test4.jpg" alt="" width="535" />
-              <h4>Title of Text</h3>
-              <p class="description-1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque reprehenderit quos
-              </p>
-           </div>
-          <div class="around-the-world content-card">
-              <img src="./images/image-test4.jpg" alt="" width="535" />
-              <h4>Title of Text</h3>
-                <p class="description-1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque reprehenderit quos
-              </p>
+            <img src="./images/image-test4.jpg" alt="" width="535" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque reprehenderit quos
+            </p>
           </div>
           <div class="around-the-world content-card">
-              <img src="./images/image-test4.jpg" alt="" width="535" />
-              <h4>Title of Text</h3>
-                <p class="description-1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Doloremque reprehenderit quos
-              </p>
-           </div>
+            <img src="./images/image-test4.jpg" alt="" width="535" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque reprehenderit quos
+            </p>
+          </div>
           <div class="around-the-world content-card">
             <img src="./images/image-test4.jpg" alt="" width="535" />
-            <h4>Title of Text</h3>
-              <p class="description-1">
+            <h4>Title of Text</h4>
+            <p class="description-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque reprehenderit quos
+            </p>
+          </div>
+          <div class="around-the-world content-card">
+            <img src="./images/image-test4.jpg" alt="" width="535" />
+            <h4>Title of Text</h4>
+            <p class="description-1">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque reprehenderit quos
             </p>
@@ -270,19 +270,19 @@
         </div>
       </div>
       <div class="line-border"></div>
-    
-
 
       <div class="subscribe-to-newsletter container">
         <div class="subscribe-title">
-          <h3 class="h2-subscribe">SUBSCRIBE TO THE NOWNESS NEWSLETTER</h3>
-          <p>Be the first to hear about our latest releases</p>
+          <h3>SUBSCRIBE TO THE NOWNESS NEWSLETTER</h3>
+          <p class="description-1">
+            Be the first to hear about our latest releases
+          </p>
         </div>
         <form
           method="POST"
           action="https://form-reader.netlify.app/.netlify/functions/formReader"
         >
-          <input type="text" name="email" placeholder="Email" />
+          <input type="text" name="email" placeholder="Email" required />
 
           <div class="checkboxes">
             <div class="switches">
@@ -290,9 +290,10 @@
                 <input type="checkbox" name="newsletter" value="yes" />
                 <span class="slider"></span>
               </label>
-              <span class="label"
-                >I would like to receive the NOWNESS NEWSLETTER</span
-              >
+
+              <p class="description-1">
+                I would like to receive the NOWNESS NEWSLETTER
+              </p>
             </div>
 
             <div class="switches">
@@ -300,10 +301,10 @@
                 <input type="checkbox" name="exclusive-offers" value="yes" />
                 <span class="slider"></span>
               </label>
-              <span class="label"
-                >I would like to receive emails from selected NOWNESS partners
-                featuring exclusive offers</span
-              >
+              <p class="description-1">
+                I would like to receive emails from selected NOWNESS partners
+                featuring exclusive offers
+              </p>
             </div>
           </div>
 
