most watched mobile fixed

--- a/index.html
+++ b/index.html
@@ -312,39 +312,31 @@
         </form>
       </div>
 
-      <!-- <div class="most-watched">
-        <div class="most-watched-all">
-          <div class="most-watched-sub">
-            <h2>MOST WATCHED</h2>
-            <div class="most-watched-content">
-              <div class="most-watched-content-card">
-                <img src="./images/image-test3.jpg" width="370" alt="" />
-                <h3 class="h3-most-watched">Title of Text</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Doloremque reprehenderit quos, ab rem fuga quasi dolor
-                  similique consequatur
-                </p>
-              </div>
-            </div>
-          </div>
+      <div class="line-border"></div>
 
-          <div class="most-watched-sub">
-            <h2>MOST WATCHED</h2>
-            <div class="most-watched-content">
-              <div class="most-watched-content-card">
-                <img src="./images/image-test3.jpg" width="370" alt="" />
-                <h3 class="h3-most-watched">Title of Text</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Doloremque reprehenderit quos, ab rem fuga quasi dolor
-                  similique consequatur
-                </p>
-              </div>
-            </div>
-          </div>
+      <div class="most-watched container">
+        <div class="most-watched-content-card">
+          <h3>MOST WATCHED</h3>
+          <img src="./images/image-test3.jpg" width="370" alt="" />
+          <h4>Title of Text</h4>
+          <p class="description-1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+          </p>
         </div>
-      </div> -->
+
+        <div class="most-watched-content-card">
+          <h3>MOST WATCHED</h3>
+          <img src="./images/image-test3.jpg" width="370" alt="" />
+          <h4>Title of Text</h4>
+          <p class="description-1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            reprehenderit quos, ab rem fuga quasi dolor similique consequatur
+          </p>
+        </div>
+      </div>
+
+      <div class="line-border"></div>
 
       <!-- <div class="share-the-love">
         <h2>SHARE THE LOVE</h2>
